--- a/Jade-1/gtk-3.0/colours.css
+++ b/Jade-1/gtk-3.0/colours.css
@@ -18,16 +18,16 @@
 @define-color    sidebar_hovering                      #999999;
 @define-color    sidebar_fg                            #ffffff;
 
-@define-color    theme_fg_color_sel                    #66CC00;
+@define-color    theme_fg_color_sel                    #60b010;
 
 /* view */
-@define-color    view_fg_sel                           #009960;
-@define-color    view_border_sel                       #00A162;
+@define-color    view_fg_sel                           #4c9900;
+@define-color    view_border_sel                       #44a100;
 @define-color    view_bg_acceleditor                   #6f9f10;
 
 /* entry */
-@define-color    entry_border_act                      #339900;
-@define-color    entry_border_act_shad                 #60C000;
+@define-color    entry_border_act                      #449900;
+@define-color    entry_border_act_shad                 #69C000;
 @define-color    entry_tag_a                           #5cb900;
 @define-color    entry_tag_b                           #57b600;
 @define-color    entry_tag_c                           #55b300;
@@ -48,20 +48,22 @@
 @define-color    button_border_sugg                    #213c0e;
 
 /* progress bar */
-@define-color    prgbar_bg_a                           #5ba900;
-@define-color    prgbar_bg_b                           #558000;
-@define-color    prgbar_border                         #546f00;
-@define-color    prgbar_progress                       @theme_accent_color;
+@define-color    prgbar_bg_a                           #72b14d;
+@define-color    prgbar_bg_b                           #549c37;
+@define-color    prgbar_trough                         #969696;
+@define-color    prgbar_trough_a                       #eeeeee;
+@define-color    prgbar_trough_b                       #ffffff;
+@define-color    prgbar_border                         #606060;
 
 /* scale slider */
 @define-color    slider_bg_a                           @theme_accent_color;
 @define-color    slider_bg_b                           @theme_accent_color;
 @define-color    slider_bdr                            @theme_accent_color;
 @define-color    slider_fg_shadow                      @shadow_color;
-@define-color    slider_bg_a_hov                       #00CC90;
-@define-color    slider_bg_b_hov                       #00CC90;
-@define-color    slider_bdr_hov                        #00CC90;
-@define-color    slider_bg_act                         #00CC90;
+@define-color    slider_bg_a_hov                       #65cc00;
+@define-color    slider_bg_b_hov                       #65cc00;
+@define-color    slider_bdr_hov                        #65cc00;
+@define-color    slider_bg_act                         #65cc00;
 
 /* infobar */
 @define-color    infobar_bg_a                          #6eb35d;
@@ -75,17 +77,17 @@
 @define-color    infobar_button_bg_act_b               #50a411;
 @define-color    infobar_button_border                 #3b7014;
 
-
 @define-color    terminal_fg                           #ABE0C9;
 
 /* ****************************** C O M M O N   C O L O U R S *********************************** */
 
 /* text widgets and the like base background color */
-@define-color    theme_base_color                      #c5c5c5;
+@define-color    theme_base_color                      #d5d5d5;
 
+@define-color    box_shadow                            #ffffff;   
 
 /* widget background color */
-@define-color    theme_bg_color                        @theme_base_color;
+@define-color    theme_bg_color                        #c5c5c5;
 @define-color    theme_bg_color_hov                    #b0b0b0;
 @define-color    theme_bg_color_from                   #454c4c;
 @define-color    theme_bg_color_to                     #2d3232;
@@ -101,9 +103,9 @@
 @define-color    inline_bg                             #b1b2b3;
 
 /* sidebar colours */
-@define-color    assistant_sidebar_bg                  #f7f7f7;
-@define-color    assistant_sidebar_bg_lbl              #585d5e;
-@define-color    assistant_sidebar_fg                  #cccccc;
+@define-color    assistant_sidebar_bg                  #3e4243;
+@define-color    assistant_sidebar_bg_lbl              #5fa24a;
+@define-color    assistant_sidebar_fg                  #ffffff;
 
 /* view */
 @define-color    view_bg                               #f7f7f7;
@@ -165,12 +167,12 @@
 @define-color    button_fg_osd_dis                     #666666;
 @define-color    button_fg_shadow                      @shadow_color;
 @define-color    button_fg_dis                         #363636;
-@define-color    button_bg_a                           #ececec;
-@define-color    button_bg_b                           #d8d8d8;
+@define-color    button_bg_a                           #f7f7f7;
+@define-color    button_bg_b                           #e9e9e9;
 @define-color    button_bg_c                           #cecece;
-@define-color    button_bg_a_hov                       #4b5454;
-@define-color    button_bg_b_hov                       #333a3a;
-@define-color    button_bg_c_hov                       #292f2f;
+@define-color    button_bg_a_hov                       #ffffff;
+@define-color    button_bg_b_hov                       #efefef;
+@define-color    button_bg_c_hov                       #cecece;
 @define-color    button_bg_a_act                       #8f8f8f;
 @define-color    button_bg_b_act                       #a1a1a1;
 @define-color    button_bg_c_act                       #aaaaaa;
@@ -185,7 +187,7 @@
 @define-color    titlebutton_bg_a                      #303636;
 @define-color    titlebutton_bg_b                      #2b2f30;
 @define-color    titlebutton_bg_c                      #181d1d;
-@define-color    titlebutton_bg_a_hov                  #484d4d;
+@define-color    titlebutton_bg_a_hov                  #404646;
 @define-color    titlebutton_bg_b_hov                  #303436;
 @define-color    titlebutton_bg_c_hov                  #181d1d;
 @define-color    titlebutton_bg_a_act                  #0f1313;
@@ -236,6 +238,10 @@
 @define-color    menuitem_fg_dis                       #6f6f6f;
 @define-color    menuitem_separator                    #1b1f20;
 @define-color    headermenu_bg_hover                   #aab1b3;
+
+@define-color    panel_bg                              #414747;
+@define-color    panel_bg_hov                          #515757;
+@define-color    panel_fg                              #f7f7f7;
 
 /* scale */
 @define-color    scale_trough_b                        @theme_bg_color;
