--- a/Jade-1/gtk-3.0/colours.css
+++ b/Jade-1/gtk-3.0/colours.css
@@ -290,7 +290,7 @@
 @define-color    theme_unfocused_bg_color              #c5c5c5;
 
 /* text widgets and the like base background color on backdrop windows */
-@define-color    theme_unfocused_base_color            #f7f7f7;
+@define-color    theme_unfocused_base_color            @theme_base_color;
 
 /* text/foreground color of selections on backdrop windows */
 @define-color    theme_unfocused_selected_fg_color     #000000;
